--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" ng-app="myApp">
+<html class="no-js">
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title></title>
+      <title data-ng-bind="pageTitle + ' &mdash; ' + Settings.appTitle">{{ Settings.appTitle }}</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
 
