Refactor all Gulp logic, moving tasks into separate files in gulp/tasks directory

--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,12 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
 
-      <link rel="stylesheet" href="css/main.min.css">
+      <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
       <div ui-view></div>
 
-      <script src="js/main.min.js"></script>
+      <script src="js/main.js"></script>
   </body>
 </html>
