--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,11 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/datetimepicker.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+      <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
   </head>
   <body>
       <div ui-view></div>
