--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
       <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/datetimepicker.css">
+      <link rel="icon" href="../images/loklak_icon_yellow_64x64.gif" type="image/gif" sizes="16x16">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
