Added masonry layout for multiple images, #30
Images now occupy 3 columns. Used angular-masonry from here:
https://github.com/passy/angular-masonry

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
   </head>
   <body>
       <div ui-view></div>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.1.8/imagesloaded.pkgd.min.js"></script>
       <script src="js/main.js"></script>
   </body>
 </html>
