--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,21 @@
       <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/datetimepicker.css">
+      <link rel="stylesheet" href="css/photoswipe.css"> 
+      <link rel="stylesheet" href="css/default-skin/default-skin.css"> 
       <link rel="icon" href="../images/loklak_icon_yellow_64x64.gif" type="image/gif" sizes="16x16">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
       <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
+      <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   </head>
   <body>
       <div ui-view></div>
+
       <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
       <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.1.8/imagesloaded.pkgd.min.js"></script>
       <script src="js/main.js"></script>
+
   </body>
 </html>
