--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
       <link rel="stylesheet" href="css/datetimepicker.css">
       <link rel="stylesheet" href="css/photoswipe.css"> 
       <link rel="stylesheet" href="css/default-skin/default-skin.css"> 
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       <link rel="icon" href="../images/loklak_icon_yellow_64x64.gif" type="image/gif" sizes="16x16">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
