--- a/app/index.html
+++ b/app/index.html
@@ -7,20 +7,31 @@
       <title ng-bind="pageTitle"></title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/datetimepicker.css">
       <link rel="stylesheet" href="css/photoswipe.css"> 
       <link rel="stylesheet" href="css/default-skin/default-skin.css"> 
+      <!-- Font Awesome Icons -->
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+      <!-- Ionicons -->
+      <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+      <!-- Theme style -->
+      <link href="css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
+      <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
+            page. However, you can choose any other skin. Make sure you
+            apply the skin class to the body tag so the changes take effect.
+      -->
+      <link href="css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
       <link rel="icon" href="../images/loklak_icon_yellow_64x64.gif" type="image/gif" sizes="16x16">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body>
       <div ui-view></div>
-
       <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
       <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.1.8/imagesloaded.pkgd.min.js"></script>
       <script src="js/main.js"></script>
-
+      <script src="js/app.min.js"></script>
   </body>
 </html>
