--- a/app/index.html
+++ b/app/index.html
@@ -10,14 +10,18 @@
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/datetimepicker.css">
       <link rel="stylesheet" href="css/photoswipe.css"> 
+      <link rel="stylesheet" href="css/admin.css"> 
+      <link rel="stylesheet" href="css/skins/skin-blue.css"> 
       <link rel="stylesheet" href="css/default-skin/default-skin.css"> 
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
       <link rel="icon" href="../images/loklak_icon_yellow_64x64.gif" type="image/gif" sizes="16x16">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
-  <body>
-      <div ui-view></div>
+  <body class="skin-blue sidebar-mini">
+
+          <div class="wrapper" ui-view></div>
 
       <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
       <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.1.8/imagesloaded.pkgd.min.js"></script>
