Create a holder for  variable as 'root'

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
       <base href="/">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title ng-bind="pageTitle"></title>
+      <title ng-bind="root.pageTitle"></title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
       <link rel="stylesheet" href="css/main.css">
