--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title ng-bind="root.pageTitle"></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -24,11 +25,14 @@
 </head>
 
 <body class="skin-blue sidebar-mini fixed">
-    <div ng-include ng-if="root.fullscreenDisabled" src="'topnav.html'"></div>
-    <div ng-include ng-if="root.fullscreenDisabled" src="'sidebar.html'"></div>
-    <div  ui-view></div>
-    <div ng-include src="'pswp.html'"></div>
-    <div ng-include ng-if="root.fullscreenDisabled" src="'controlsidebar.html'"></div>
+    <div class="container-fluid">
+        <div ng-include ng-if="root.fullscreenDisabled" src="'topnav.html'"></div>
+        <div ng-include ng-if="root.fullscreenDisabled" src="'sidebar.html'"></div>
+        <div ui-view></div>
+        <div ng-include src="'pswp.html'"></div>
+        <div ng-include ng-if="root.fullscreenDisabled" src="'controlsidebar.html'"></div>
+    </div>
+    
     <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.1.8/imagesloaded.pkgd.min.js"></script>
     <script src="js/main.js"></script>
