--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 
-<body class="skin-blue sidebar-mini fixed">
-    <div class="container-fluid">
+<body ng-class="root.sidebarEnabled? 'skin-blue fixed sidebar-mini': 'skin-blue layout-top-nav'">
+    <div class="wrapper">
         <div ng-include ng-if="root.fullscreenDisabled" src="'topnav.html'"></div>
-        <div ng-include ng-if="root.fullscreenDisabled" src="'sidebar.html'"></div>
+        <div ng-include ng-if="root.fullscreenDisabled && root.sidebarEnabled" src="'sidebar.html'"></div>
         <div ui-view></div>
         <div ng-include src="'pswp.html'"></div>
         <div ng-include ng-if="root.fullscreenDisabled" src="'controlsidebar.html'"></div>
