Moving towards a twitter deisgn

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="css/datetimepicker.css">
     <link rel="stylesheet" href="css/photoswipe.css">
     <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/_loklakcore.scss">
+    <link rel="stylesheet" href="css/_loklak_more_1.scss">
+    <link rel="stylesheet" href="css/_loklak_more_2.scss">
     <link rel="stylesheet" href="css/skins/skin-blue.css">
     <link rel="stylesheet" href="css/default-skin/default-skin.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
