Add templates and styles for map search result

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/default-skin/default-skin.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
     <link rel="stylesheet" type="text/css" href="css/colorpicker.min.css">
     <link rel="icon" href="../images/loklak_icon_yellow_64x64.gif" type="image/gif" sizes="16x16">
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
